[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-request-shield"
version = "0.1.0"
description = "Idempotency / duplicate-request protection for Django (session or Redis backends)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{name = "EDFOLMI", email = "contact@edfolmi.com"}]
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]
dependencies = [
  "Django>=3.2"
]
optional-dependencies = { redis = ["redis>=4.0"] }
